# WarpApi

./: .gitignore  CMakeLists.txt  README.md  config.json
src/: WarpDefs.h  main.cpp
src/Endpoint/: Endpoint.h  EndpointManager.cpp  EndpointManager.h  EndpointRegister.cpp  EndpointRegister.h  RequestManager.h  ResponseManager.h
src/EventLoop/: EventLoop.cpp  EventLoop.h
src/Managers/: EndpointManager.cpp  EndpointManager.h  SessionManagerWorker.cpp  SessionManagerWorker.h  ThreadPoolManager.cpp  ThreadPoolManager.h
src/Request/: HttpRequest.h
src/Response/: HttpResponse.h
src/Server/: HttpServer.cpp  HttpServer.h  Session.cpp  Session.h  WebSocket.cpp  WebSocket.h  WebSocketContext.cpp  WebSocketContext.h
src/Services/: BaseService.h  GeneralServices.cpp  GeneralServices.h
src/Settings/: Settings.cpp  Settings.h
src/Utils/: Conversions.cpp  Conversions.h  HeadersList.h  JsonLoader.cpp  JsonLoader.h  RingBuffer.h  RouteIdentifier.cpp  RouteIdentifier.h  StringUtils.cpp  StringUtils.h
